BusOne/src/objects/Sample_Inventory_vod__c.object
<CustomObject>
    <description>Sample Inventory represents the header record for a physical inventory of all Sample Lots for a specific user.</description>
    <fields>
        <fullName>Audit_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Audit checkbox represents a field to designate of the Sample Inventory being conducted is a yearly Audit.  Access to be controlled by Field Level Security</description>
        <label>Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory_Date_Time_vod__c</fullName>
        <description>The User entered Date and time that the Inventory count occured.  This is the effective date of the Sample Inventory counts.</description>
        <label>Inventory Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inventory_For_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Inventory For represents the User that the physical inventory is being conducted for.  Selection of the Inventory For fields determines the User that the Sample Inventory Line Items that will be displayed.</description>
        <label>Inventory For</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sample_Inventory_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_From_Date_vod__c</fullName>
        <description>Inventory From Date is the Date of the last Submitted Inventory.  The Inventory From Date is populated from the Submitted Date of the most recently Submitted Sample Inventory.</description>
        <label>Inventory From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inventory_Type_vod__c</fullName>
        <description>Inventory Type represents the type of physical inventory being conducted.</description>
        <label>Inventory Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Year-end</fullName>
                </value>
                <value>
                    <fullName>Close-Out</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_Created_Datetime_vod__c</fullName>
        <description>Time when the sample inventory was created on a mobile device.  Will be blank it if was created online.</description>
        <label>Mobile Created Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_Last_Modified_Datetime_vod__c</fullName>
        <description>Time when the sample inventory was last modified on a mobile device.</description>
        <label>Mobile Last Modified Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_Sample_Lots_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, a User is able to Save/Submit a Sample Inventory when there are no Sample Inventory Line Items [Sample Lots] for the User.</description>
        <inlineHelpText>If checked, a User is able to Save/Submit a Sample Inventory when there are no Sample Inventory Line Items [Sample Lots] for the User.</inlineHelpText>
        <label>No Sample Lots</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Inventory_Date_Time_vod__c</fullName>
        <description>The Previous Inventory Date Time field is a system generated Datetime that is based upon the last submitted Inventory and the value of the Inventory Date Time field.</description>
        <label>Previous Inventory Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status represents the current status of the Inventory.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Saved_vod</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_Date_vod__c</fullName>
        <description>Submitted Date is the date that the Inventory has been Submitted.</description>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submitted_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the inventory been submitted.  Default value is false.</description>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unlock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Unlock checkbox is used by the VBioPharma application to determine if a user has access to Unlock a Sample Inventory that has been Submitted.  Access is controlled by Field Level security on the Unlock checkbox.</description>
        <label>Unlock</label>
        <type>Checkbox</type>
    </fields>
    <label>Sample Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Inventory_Type_vod__c</columns>
        <columns>Status_vod__c</columns>
        <columns>Submitted_Date_vod__c</columns>
        <columns>Inventory_From_Date_vod__c</columns>
        <columns>Inventory_For_vod__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>INV-{000000000}</displayFormat>
        <label>Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Inventories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>